objects/Ecom_Gift_Card__c.object
<CustomObject>
    <fields>
        <fullName>Applied_Amount__c</fullName>
        <label>Applied Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CC_Cart__c</fullName>
        <label>CC Cart</label>
        <referenceTo>ccrz__E_Cart__c</referenceTo>
        <relationshipLabel>Ecom Gift Cards</relationshipLabel>
        <relationshipName>Ecom_Gift_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ecom_Gift_Card_Coupon__c</fullName>
        <label>Ecom Gift Card Coupon</label>
        <referenceTo>Ecom_Coupon__c</referenceTo>
        <relationshipLabel>Ecom Gift Cards</relationshipLabel>
        <relationshipName>Ecom_Gift_Cards</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Ecom Gift Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EGF-{0000}</displayFormat>
        <label>Ecom Gift Card Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ecom Gift Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>